--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,12 +11,12 @@ unbind C-b
 bind C-a send-prefix 
 
 # statusbar customization
-set -g status-bg magenta
+set -g status-bg green
 set -g status-fg white
 set -g status-left-length 30
-set -g status-left "#[bg=yellow]#[fg=magenta]Session: {#S}#[fg=yellow] |"
+set -g status-left "#[bg=yellow]#[fg=blue]Session: {#S}#[fg=yellow] |"
 
-set -g status-right '#[bg=yellow]#[fg=yellow]| #[fg=magenta]"#H" %d.%m.%y %H:%M'
+set -g status-right '#[bg=yellow]#[fg=yellow]| #[fg=blue]"#H" %d.%m.%y %H:%M'
 
 set -g pane-border-fg blue
 set -g pane-active-border-fg yellow
