--- a/.gitconfig
+++ b/.gitconfig
@@ -5,5 +5,12 @@
 	name = Nicola Coretti
 [core]
 	editor = vim
+	excludesfile = /Users/NiCoretti/.gitignore_global
 [http]
 	sslVerify = false
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
