added 256 color support for vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,5 +26,8 @@ set-window-option -g window-status-fg yellow
 set-window-option -g window-status-current-bg yellow
 set-window-option -g window-status-current-fg black
 
+# misc
+set -g default-terminal "screen-256color"
+
 # history 
 set -g history-limit 1000
